--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <head>
     <title>Hello World</title>
+
+<style>
+    body {
+background-color: #1433C3;
+}
+
+    h1 {
+color: #34D32C;
+}
+
+    p {
+color: #134F2F;
+}
+    </style>
 </head>
 
 <body>
     <h1>Hello World, I’m Eyob Ollivierre</h1>
+
+    <p>I like to play basketball with friends, my favorite food is chinese food. My favorite hobby besides enjoying
+        basketball at the YMCA is readin and practicing coding on freecodecamp!
+    </p>
 </body>
 
 </html> 
